2009-03-06  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpatom.c: fixed incorrect enum member names.

2009-03-04  Lars Hartmann  <lars (at) chaotika (dot) org>

	Renamed enums to match their typedefs:
	* include/atom.h (lpatom_sufe_t): renamed anonym enum to
	lpatom_sufe.
	(lpatom_sufe): made enum elements uppercase and added LP_ prefix.
	* include/dependency.h (lpdependency_type_t): renamed anonym enum
	to lpdependency_type.
	(lpdependency_type): made enum elements uppercase and added LP_
	prefix.

	Renamed Structs to match their typedefs:
	* src/liblpxpak.c (lpxpak_index_entry_t): renamed anonym struct to
	lpxpak_index_entry.
	(lpxpak_index_t): renamed anonym struct to lpxpak_index
	* include/dependency.h (lpdependency_t): renamed anonym struct to
	lpdependency.
	* include/xpak.h (lpxpak_entry_t): renamed anonym struct to
	lpxpak_entry.
	(lpxpak_t): renamed anonym struct to lpxpak
	(lpxpak_blob_t): renamed anonym struct to lpxpak_blob
	* include/atom.h (lpatom_t): renamed anonym struct to lpatom.
	(lpatom_regex): renamed anonym struct to lpatom_regex.

2009-03-03  Lars Hartmann  <lars (at) chaotika (dot) org>

	Renamed defines:
	* include/util.h (__LPUTIL): renamed to LPUTIL and set value to 1.
	* include/common.h (__LPCOMMON_H): renamed to LPCOMMON and set
	value to 1.
	* include/atom.h (__LPATOM): renamed to LPATOM and set value to 1.
	* include/xpak.h (__LPXPAK): renamed to LPXPAK and set value to 1.

	* doc/Requirements.txt: added user-requested requirements.

2009-03-02  Lars Hartmann  <lars (at) chaotika (dot) org>

	Started to add Design Documents:
	* doc/Requirements.txt: added.

2009-03-01  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/Makefile.am: renamed entries.

2009-02-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	* configure.ac: removed unneeded tests.

2009-02-21  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c (lpxpak_parse_fd): replaced EBADFD with the
	posix equivalent EBADF.
